# mediafile

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.rst  appveyor.yml  mediafile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  changelog_reminder.yaml  lint.yaml  main.yml  make_release.yaml
docs/: Makefile  changelog.rst  conf.py  index.rst
mediafile/: __init__.py  _types.py  constants.py  deprecation.py  exceptions.py  fields.py  mediafile.py
mediafile/storage/: __init__.py  afs.py  ape.py  base.py  flac.py  mp3.py  mp4.py  vorbis.py
mediafile/utils/: __init__.py  image.py  mutagen_wrapper.py  soundcheck.py  type_conversion.py
test/: __init__.py  _common.py  test_mediafile.py  test_mediafile_edge.py
