[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mediafile"
author = "Adrian Sampson"
author-email = "adrian@radbox.org"
home-page = "https://github.com/beetbox/mediafile"
description-file = "README.rst"
requires = [
    "mutagen>=1.46",
    "filetype>=1.2.0",
]
requires-python = ">=3.7"
classifiers = [
    'Topic :: Multimedia :: Sound/Audio',
    'License :: OSI Approved :: MIT License',
    'Environment :: Web Environment',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: PyPy',
]

[tool.flit.metadata.requires-extra]
test = [
    "tox"
]
dev = [
    "ruff",
    "pytest"
]

[tool.ruff]
target-version = "py39"
include = ["mediafile.py", "test/**/*.py"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "W", # pycodestyle
]
ignore = [
    "TC006", # no need to quote 'cast's since we use 'from __future__ import annotations'
]

[tool.ruff.format]
quote-style = "double"
