[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mediafile"
authors = [
    { name = "Adrian Sampson", email = "adrian@radbox.org" },
]
readme = "README.rst"
license = "MIT"
requires-python = ">=3.9"
description = "A simple, cross-format library for reading and writing media file metadata."
dynamic = ["version"]
classifiers = [
    'Topic :: Multimedia :: Sound/Audio',
    'Environment :: Web Environment',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = [
    "mutagen>=1.46",
    "filetype>=1.2.0",
]


[project.urls]
Documentation = "https://mediafile.readthedocs.io"
Source = "https://github.com/beetbox/mediafile"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest"
]

[tool.ruff]
target-version = "py39"
include = ["mediafile.py", "test/**/*.py"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "W", # pycodestyle
]
ignore = [
    "TC006", # no need to quote 'cast's since we use 'from __future__ import annotations'
]

[tool.ruff.format]
quote-style = "double"
