[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mediafile"
version = "1.0.0-rc1"
authors = [
    { name = "Adrian Sampson", email = "adrian@radbox.org" },
]
readme = "README.rst"
license = "MIT"
requires-python = ">=3.9"
description = "A simple, cross-format library for reading and writing media file metadata."
classifiers = [
    'Topic :: Multimedia :: Sound/Audio',
    'Environment :: Web Environment',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: PyPy',
]
dependencies = [
    "mutagen>=1.46",
    "filetype>=1.2.0",
]


[project.urls]
Documentation = "https://mediafile.readthedocs.io"
Source = "https://github.com/beetbox/mediafile"


[tool.ruff]
target-version = "py39"
include = ["mediafile/**/*", "test/**/*.py"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    "G", # flake8-logging-format
    "I", # isort
    "ISC", # flake8-implicit-str-concat
    "N", # pep8-naming
    "W", # pycodestyle
]
ignore = [
    "TC006", # no need to quote 'cast's since we use 'from __future__ import annotations'
]

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]

[tool.poe]
executor.type = "uv"

[tool.poe.tasks.build]
help = "Build the package"
cmd = "uv build"

[tool.poe.tasks.test]
help = "Run the test suite with coverage"
cmd = "pytest $OPTS"
env.OPTS.default = "---cov=mediafile test/"

[tool.poe.tasks.test-with-coverage]
help = "Run the test suite with coverage (alias for 'poe test')"
ref = "test"
env.OPTS.default = """
--cov=mediafile
--cov-report=xml:.reports/coverage.xml
--cov-report=html:.reports/html
--cov-branch
--cov-context=test
"""

[tool.poe.tasks.lint]
help = "Run ruff linter"
cmd = "ruff check"

[tool.poe.tasks.format]
help = "Autoformat code with ruff"
cmd = "ruff format"

[tool.poe.tasks.check-types]
help = "Check the code for typing issues. Accepts mypy options."
cmd = "mypy"
